# ikulab-motion-viewer

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.org  CMakePresets.json  Dockerfile  FirstTriangleApp.cpp  FirstTriangleApp.hpp  LICENSE.txt  Makefile  README.md  README.txt  app  app.cpp  app.hpp  build.sh  check_vcpp_version_and_install.spec  classify.txt  compile.sh  easylogging.conf  format-all.sh  imgui.ini  init-cc.cmake  joint_info.txt  main.cpp  memo.txt  requirements.txt  run.sh  sample.cpp  test.sh  toggletasks.json  vcpkg-configuration.json  vcpkg.json  vcpp_version.txt
app/: CMakeLists.txt  app.cpp  app.hpp  buildInfo.h  buildInfo.h.in  callbacks.cpp  main.cpp  resourceDirectory.cpp  resourceDirectory.hpp  updateUi.cpp  versionChecker.hpp
app/context/: CMakeLists.txt  camera.cpp  camera.hpp  ui.hpp
app/motionUtil/: CMakeLists.txt  animator.cpp  animator.hpp  bvhExporter.cpp  bvhExporter.hpp  bvhParser.cpp  bvhParser.hpp  common.cpp  common.hpp
app/util/: errorUtils.cpp  errorUtils.hpp  popupUtils.cpp  popupUtils.hpp
core/ikura/: CMakeLists.txt  ikura.hpp  ikuraConfig.h  ikuraConfig.h.in  init.cpp  init.hpp  vcpkg.json
core/ikura/common/: CMakeLists.txt  logLevels.hpp  resourceDirectory.cpp  resourceDirectory.hpp
core/ikura/engine/: CMakeLists.txt  appEngine.cpp  appEngine.hpp
core/ikura/engine/renderEngine/: handleExtension.cpp  initDevice.cpp  initInstance.cpp  renderEngine.cpp  renderEngine.hpp
core/ikura/misc/: CMakeLists.txt  shaderCodes.hpp
core/ikura/renderComponent/: CMakeLists.txt  renderComponentProvider.cpp  renderContent.cpp  renderContent.hpp  renderTarget.cpp  renderTarget.hpp
core/ikura/renderComponent/basic/: basicRenderComponentProvider.cpp  basicRenderComponentProvider.hpp  basicRenderContent.cpp  basicRenderContent.hpp  basicRenderTarget.cpp  descriptorSetProps.hpp
core/ikura/shape/: CMakeLists.txt  shape.cpp  shape.hpp  shapes.hpp
core/ikura/shape/bone/: octahedronBone.cpp
core/ikura/shape/cube/: cube.hpp  gradationColorCube.cpp  singleColorCube.hpp
core/ikura/shape/debug/: debugObject.cpp  debugObject.hpp  directionDebugObject.cpp  directionDebugObject.hpp
core/ikura/shape/floor/: floor.hpp
core/ikura/shape/sphere/: singleColorSphere.cpp  singleColorSphere.hpp  sphere.cpp  sphere.hpp
core/ikura/util/: shaderUtils.cpp  shaderUtils.hpp
core/ikura/window/: CMakeLists.txt  window.hpp
core/ikura/window/nativeWindow/: glfwNativeWindow.cpp  glfwNativeWindow.hpp  nativeWindow.cpp  nativeWindow.hpp
core/ikura/window/virtualWindow/: imGuiVirtualWindow.cpp  imGuiVirtualWindow.hpp  virtualWindow.hpp
doc/: Build.md  (+1 more)
src/: CMakeLists.txt  animator.cpp  animator.hpp  app.cpp  app.hpp  base.cpp  base.hpp  config.h  main.cpp  resourceDirectory.cpp  resourceDirectory.hpp  updateUi.cpp
src/app/: CMakeLists.txt  animator.cpp  animator.hpp  app.cpp  app.hpp  callbacks.cpp  main.cpp  updateUi.cpp
src/app/context/: camera.cpp  camera.hpp  mouse.cpp  mouse.hpp  ui.cpp  ui.hpp
src/app/motionUtil/: animator.cpp  animator.hpp  bvhParser.cpp  bvhParser.hpp  common.hpp
src/app/util/: CMakeLists.txt  bvhParser.cpp  bvhParser.hpp
src/context/: CMakeLists.txt  camera.cpp  camera.hpp  keyboard.hpp  mouse.cpp  mouse.hpp  ui.hpp
src/definition/: animation.hpp  common.hpp  description.hpp  vertex.hpp
src/lib/: CMakeLists.txt  base.cpp  renderTarget.hpp
src/lib/context/: CMakeLists.txt  camera.hpp  mouse.hpp
src/lib/definition/: common.hpp  ubo.hpp
src/lib/engine/: CMakeLists.txt  renderEngine.hpp
src/lib/ikura/: CMakeLists.txt  ikura.cpp  ikura.hpp
src/lib/ikura/common/: renderPrimitiveTypes.cpp  renderPrimitiveTypes.hpp  uniformBufferInfo.hpp
src/lib/ikura/context/: CMakeLists.txt  camera.cpp  camera.hpp  keyboard.hpp  mouse.hpp
src/lib/ikura/definition/: animation.hpp  descriptor.hpp  errorUtil.hpp  ubo.hpp
src/lib/ikura/engine/: CMakeLists.txt  appEngine.cpp  appEngine.hpp  renderEngine.cpp  renderEngine.hpp
src/lib/ikura/engine/renderEngine/: handleExtension.cpp  initDevice.cpp  initInstance.cpp  renderEngine.cpp  renderEngine.hpp
src/lib/ikura/misc/: CMakeLists.txt  initVulkanHppDispatchLoader.cpp  initVulkanHppDispatchLoader.hpp
src/lib/ikura/renderComponent/: CMakeLists.txt  defaultSetting.hpp  renderComponentProvider.cpp  renderComponentProvider.hpp  renderContent.cpp  renderContent.hpp  renderTarget.cpp  renderTarget.hpp
src/lib/ikura/renderComponent/basic/: basicRenderComponentProvider.cpp  basicRenderComponentProvider.hpp  basicRenderContent.cpp  basicRenderContent.hpp  basicRenderTarget.cpp  basicRenderTarget.hpp  descriptorSetProps.hpp
src/lib/ikura/shape/: CMakeLists.txt  shape.cpp  shape.hpp  shapes.hpp  sphere.cpp  sphere.hpp
src/lib/ikura/shape/bone/: bone.cpp  bone.hpp  (+4 more)
src/lib/ikura/window/: CMakeLists.txt  window.cpp  window.hpp  windowInputContext.hpp
src/lib/shape/: shape.cpp
src/lib/shape/bone/: bone.hpp
src/lib/shape/cube/: cube.hpp  separatedColorCube.cpp
src/lib/ui/: CMakeLists.txt
src/lib/ui/uiWindow/: indicatorWindow.hpp  uiWindow.hpp
src/lib/window/: window.hpp  windowInputContext.hpp
src/lib/window/nativeWindow/: glfwNativeWindow.hpp  nativeWindow.hpp
src/lib/window/virtualWindow/: imGuiUiWindow.hpp  virtualWindow.hpp
src/motionUtil/: CMakeLists.txt  animator.cpp  animator.hpp  bvhExporter.cpp  bvhExporter.hpp  bvhParser.cpp
src/shape/: CMakeLists.txt  bone.cpp  bone.hpp  cube.cpp  cube.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
src/shape/bone/: bone.cpp  bone.hpp  octahedronBone.cpp  stickBone.cpp  stickBone.hpp  stickTetrahedronBone.cpp  stickTetrahedronBone.hpp
src/shape/cube/: gradationColorCube.cpp  gradationColorCube.hpp  singleColorCube.cpp  singleColorCube.hpp
src/shape/debug/: directionDebugObject.hpp
src/shape/floor/: filledFloor.cpp  filledFloor.hpp  floor.cpp  gridFloor.cpp  gridFloor.hpp
src/ui/: uiContext.cpp  uiContext.hpp
src/ui/uiWindow/: indicatorWindow.cpp  indicatorWindow.hpp  uiWindow.cpp  uiWindow.hpp
src/util/: CMakeLists.txt  bvhParser.cpp  bvhParser.hpp
(+92 files in other folders)
